--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
-a comment! */
-
-/* CSS Syntax:
-
-selector {
-  property: value;
-  property: value;
+img, video, audio, iframe, table, form {
+  width: 100%; /* IE */
+  max-width: 100%; /* FF, Safari, Chrome */
 }
 
-*/
-
-/* Type selector */
+.row {
+  margin-bottom: 20px;
+}
 
 p { /* select all <p> */
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
